# mineral-rights

./: .dockerignore  .gitignore  .vercelignore  CLIENT_DELIVERY_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  DOCUMENT_AI_INTEGRATION_README.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.gcp  Dockerfile.job  GCP_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LONG_PROCESSING_FIX_GUIDE.md  LONG_RUNNING_JOBS_GUIDE.md  MEMORY_EFFICIENT_CONFIG.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MULTI_DEED_FIX_GUIDE.md  MULTI_DEED_FIX_SUMMARY.md  RENDER_JOBS_SETUP_GUIDE.md  SETUP_DOCUMENT_AI.md  SSL_ISSUE_SOLUTION.md  SYNTHETIC_DATASET_README.md  TIMEOUT_CONFIGURATION.md  TIMEOUT_OPTIMIZATION_GUIDE.md  TROUBLESHOOTING_GUIDE.md  analyze_base64.py  analyze_pdf_content.py  batch_job_info.json  batch_predictions.json  batch_processing_service.py  batch_results.json  check_batch_status.py  check_processor_status.py  chunk_10_results.json  chunk_11_results.json  chunk_12_results.json  (+160 more)
.vercel/: project.json
api/: app.py  app_async.py  app_complex_backup.py  app_simple.py  gcs_upload_endpoint.py  job_api_endpoints.py  job_manager.py  job_queue.py  job_worker.py  redis_job_manager.py  render_jobs_solution.py  requirements.txt
deed_tracking/: session_1759347683_2220_summary.json  session_1759347991_6094_summary.json  session_1759348240_2991_summary.json  session_1759788680_3831_summary.json
demo_tests/: DEPLOYMENT_README.md  WEBAPP_README.md  cleanup_codebase.sh  evaluate_full_dataset.py  run_demo.sh  start_webapp.sh  (+1 more)
(+260 files in other folders)
