[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineral-rights"
version = "0.1.0"
description = "Automatic mineral rights reservation classifier"
requires-python = ">=3.8"
dependencies = [
    "anthropic",
    "PyMuPDF",
    "pillow",
    "streamlit",
    "scikit-learn>=1.3.0",
    "requests",
    "pandas",
    "numpy ",
]

[tool.setuptools.packages.find]
where = ["src"]
